[workspace]
members = [
    "src/app",
    "src/front",
    "src/server",
]
resolver = "2"

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos", branch = "main" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", branch = "main" }
leptos_router = { git = "https://github.com/leptos-rs/leptos", branch = "main" }
leptos_dom = { git = "https://github.com/leptos-rs/leptos", branch = "main" }
leptos_actix = { git = "https://github.com/leptos-rs/leptos", branch = "main" }

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
name = "lekiu"
bin-package = "server-package"
lib-package = "front-package"
assets-dir = "src/assets"
style-file = "src/css/main.scss"
site-root = "target/site/src"
site-addr = "127.0.0.1:3000"
tailwind-input-file = "./input.css"
tailwind-config-file = "./tailwind.config.js"


